# uasgroundrisk

./: .cppcheck-suppressions  .gitignore  CMakeLists.txt  CMakeSettings.json  conanfile.py  conanfile.txt  cppcheck_report.txt
.github/workflows/: cppcheck.yml  linter.yml  linux.yml
cmake/: FindGEOS.cmake  FindPROJ.cmake  MacPlistMacros.cmake
include/UAS_GR/: library.h
include/uasgroundrisk/gridmap/: GridMap.h  Iterators.h  TypeDefs.h
include/uasgroundrisk/map_gen/: GeospatialGridMap.h  OSMMap.h  PopulationMap.h  TemporalPopulationMap.h
include/uasgroundrisk/map_gen/osm/: OSMOverpassQuery.h  OSMOverpassQueryBuilder.h  OSMTag.h
include/uasgroundrisk/map_gen/osm/handlers/: DefaultNodeLocationsForWaysHandler.h  GridMapOSMBuildingsHandler.h  GridMapOSMHandler.h  OSMTagGeometryHandler.h
include/uasgroundrisk/risk_analysis/: IncrementalRiskMap.h  RiskEnums.h  RiskMap.h
include/uasgroundrisk/risk_analysis/aircraft/: AircraftDescentModel.h  AircraftEnums.h  AircraftModel.h  AircraftStateModel.h
include/uasgroundrisk/risk_analysis/obstacles/: ObstacleMap.h
include/uasgroundrisk/risk_analysis/weather/: WeatherMap.h
src/: CMakeLists.txt  library.cpp
src/gridmap/: CMakeLists.txt  GridMap.cpp  GridMap.h  Iterators.h  TypeDefs.h
src/map_gen/: CMakeLists.txt  GeospatialGridMap.cpp  GeospatialGridMap.h  GridMapOSMBuildingsHandler.cpp  GridMapOSMBuildingsHandler.h  GridMapOSMHandler.cpp  GridMapOSMHandler.h  OSMMap.cpp  OSMTagGeometryHandler.cpp  PopulationMap.cpp  PopulationMap.h  TemporalPopulationMap.cpp  TemporalPopulationMap.h
src/map_gen/census/: CMakeLists.txt  Ingest.cpp  Ingest.h
src/map_gen/osm/: CMakeLists.txt  DefaultNodeLocationsForWaysHandler.h  OSMOverpassQuery.cpp  OSMOverpassQuery.h  OverpassExceptions.h
src/map_gen/osm/builder/: CMakeLists.txt  OSMOverpassQueryBuilder.cpp  OSMOverpassQueryBuilder.h
src/map_gen/roads/: CMakeLists.txt
src/pathfinding/: AStar.cpp  AStar.h  CMakeLists.txt
src/risk_analysis/: CMakeLists.txt  IncrementalRiskMap.cpp  RiskEnums.h  RiskMap.cpp  RiskMap.h
src/risk_analysis/aircraft/: AircraftDescentModel.cpp  AircraftDescentModel.h  AircraftEnums.h  AircraftModel.cpp  AircraftModel.h  AircraftStateModel.h  CMakeLists.txt
src/risk_analysis/obstacles/: CMakeLists.txt  ObstacleMap.cpp
src/risk_analysis/weather/: CMakeLists.txt  WeatherMap.cpp  WeatherMap.h  WeatherModel.cpp  WeatherModel.h
src/utils/: CMakeLists.txt  DataFitting.h  DefaultGEOSMessageHandlers.h  GeometryOperations.h  GeometryProjectionUtils.h  VectorOperations.h
test/: AircraftDescentModelTests.cpp  AircraftModelTests.cpp  BuildingHeightMapTests.cpp  CMakeLists.txt  DataFittingTests.cpp  DataIngestTests.cpp  GeospatialGridMapTests.cpp  GradientDescentTests.cpp  GridMapOSMConstructionTests.cpp  IncrementalRiskMapTests.cpp  MappingTests.cpp  OSMQueryTests.cpp  OSMResponseTests.cpp  OSMTestHandlers.h  PopulationMapTests.cpp  ProjectionTests.cpp  RiskMapTests.cpp  TemporalPopulationMapTests.cpp  TemporalRiskMapTests.cpp  TestData.h  TestPlottingUtils.h  UtilTests.cpp  VectorOpsTests.cpp  WeatherMapTests.cpp
test/data/: rvs_test.csv
